--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "haflopp",
+  "name": "haflop-poker",
   "version": "1.0.0",
-  "description": "",
-  "homepage": "https://github.com/Stevejobles/HaFlopp#readme",
-  "bugs": {
-    "url": "https://github.com/Stevejobles/HaFlopp/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Stevejobles/HaFlopp.git"
-  },
-  "license": "ISC",
-  "author": "",
-  "type": "commonjs",
-  "main": "index.js",
+  "description": "Online poker web application",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.7",
-    "express": "^5.1.0",
-    "express-session": "^1.18.1",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.15.0",
-    "nodemailer": "^6.10.1",
-    "path": "^0.12.7"
-  }
+    "mongodb": "^6.3.0",
+    "nodemailer": "^6.9.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "author": "",
+  "license": "ISC"
 }
