--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "haflop-poker",
   "version": "1.0.0",
   "description": "Online poker web application",
-  "main": "server.js",
+  "main": "/server/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node /server/server.js",
+    "dev": "nodemon /server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
