--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
