--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
+    "nodemailer": "^6.10.1",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
